# Retina_Image_Analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  STATUS_REPORT.md  coverage.json  docker-compose.yml  pyproject.toml  test_results.xml
.github/workflows/: ci-cd.yml
configs/: config.yaml
data/: DATASETS.md
scripts/: download_datasets.sh  setup_github_repo.sh  setup_project.py
src/: __init__.py
src/data/: __init__.py  augmentation.py  dataset.py  loaders.py  preprocessing.py  validation.py
tests/: __init__.py  test_augmentation.py  test_data.py
